@@ -1,3 +1,0 @@
-#Tue Jan 27 18:08:49 EET 2009
-copyright.year=2008, 2009
-hawkscope.version=0.5.2
